<resources>
    <string name="app_name">Fling-In</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login"><u>Log In</u></string>

    <!--Facebook Auth-->
    <string name="facebook_app_id">1904059843029781</string>
    <string name="fb_login_protocol_scheme">fb1904059843029781</string>

    <string name="loading">Loading…</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_confirm_hint">Password Confirm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_challenges">Challenges</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_friends">Friends</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!--NOTIFICATION CHANNEL IDs-->
    <string name="channel_id_friend_requests">friend_requests</string>
    <string name="channel_name_friend_requests">Friend Requests</string>
    <string name="channel_desc_friend_requests">Receiving notifications for friend requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="default_status">\"Hi there, I\'m using Fling-In App\"</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="btn_accept_friend">Accept Friend Request</string>
    <string name="btn_cancel_friend">Cancel Friend Request</string>
    <string name="btn_send_friend">Send Friend Request</string>
    <string name="btn_unfriend">Unfriend this user</string>
    <string name="btn_decline_request">Decline Friend Request</string>
    <string name="display_name">Display Name</string>
    <string name="chat_sample_msg">Hi there, this is a sample long message for testing! See you!</string>
    <string name="chat_time_sample">00:00</string>
    <string name="online_string">online</string>
    <string name="title_activity_maps">Map</string>
</resources>
