<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:background="@color/paleCerulean2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="1150dp"
                android:background="@drawable/ic_finaldesign">

                <EditText
                    android:id="@+id/login_editTxt_email"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/rounded_edittext_register_login"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <EditText
                    android:id="@+id/login_editTxt_password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edittext_register_login"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/login_editTxt_email"
                    app:layout_constraintStart_toStartOf="@+id/login_editTxt_email"
                    app:layout_constraintTop_toBottomOf="@+id/login_editTxt_email" />

                <TextView
                    android:id="@+id/login_txtView_backToRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/login_editTxt_password"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="@+id/login_editTxt_password"
                    app:layout_constraintTop_toBottomOf="@+id/login_editTxt_password" />

                <ImageButton
                    android:id="@+id/login_btn_scrollDown"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="65.5dp"
                    android:background="@drawable/rounded_btn"
                    android:src="@drawable/ic_arrow_downward_black_24dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.98"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

                <ImageButton
                    android:id="@+id/login_btn_scrollDown2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="172dp"
                    android:background="@drawable/rounded_btn"
                    android:src="@drawable/ic_arrow_downward_black_24dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

                <Button
                    android:id="@+id/login_btn_login"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="78dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/btn_login"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/login_editTxt_password"
                    app:layout_constraintStart_toEndOf="@+id/login_txtView_backToRegister"
                    app:layout_constraintTop_toBottomOf="@+id/login_editTxt_password" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_flinginlogo" />

                <ImageButton
                    android:id="@+id/login_btn_googlePlus"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="65dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rounded_btn"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_google_plus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

                <FrameLayout
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="105dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageButton
                        android:id="@+id/login_btn_facebook"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/btn_facebook"
                        android:padding="18dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_facebook" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </FrameLayout>



                <ImageButton
                    android:id="@+id/login_btn_twitter"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="150dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/btn_twitter"
                    android:padding="17dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_twitter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.88"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

                <TextView
                    android:id="@+id/txtView_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sign_up"
                    android:textColor="#ffffff"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.04"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_scrollDown2" />

                <TextView
                    android:id="@+id/txtView_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toTopOf="@+id/login_editTxt_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.16"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/login_btn_showPassword"
                    android:layout_width="32dp"
                    android:layout_height="27dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_eyeblack"
                    app:layout_constraintBottom_toBottomOf="@+id/login_editTxt_password"
                    app:layout_constraintEnd_toEndOf="@+id/login_editTxt_password"
                    app:layout_constraintTop_toTopOf="@+id/login_editTxt_password" />

                <EditText
                    android:id="@+id/register_editTxt_confirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_edittext_register_login"
                    android:ems="10"
                    android:hint="@string/password_confirm_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/register_btn_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/register_editTxt_password"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edittext_register_login"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/register_editTxt_confirmPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/register_editTxt_username"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext_register_login"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:paddingLeft="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/register_editTxt_email"
                    app:layout_constraintEnd_toEndOf="@+id/register_editTxt_email"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/register_editTxt_email" />

                <Button
                    android:id="@+id/register_btn_register"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_btn"
                    android:text="Sign Up"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/register_editTxt_email"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edittext_register_login"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/register_editTxt_password"
                    app:layout_constraintEnd_toEndOf="@+id/register_editTxt_password"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/register_editTxt_password" />

                <Button
                    android:id="@+id/register_btn_selectPhoto"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/btn_google_design"
                    android:text="Select&#10;photo"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/register_editTxt_username" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/register_selectPhoto_imageView"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/lightRedOchre4"
                    app:layout_constraintBottom_toBottomOf="@+id/register_btn_selectPhoto"
                    app:layout_constraintEnd_toEndOf="@+id/register_btn_selectPhoto"
                    app:layout_constraintStart_toStartOf="@+id/register_btn_selectPhoto"
                    app:layout_constraintTop_toTopOf="@+id/register_btn_selectPhoto" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>